# manifest

./: .gitignore  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
ais/: consumer.py  dwell.py
alerting/: notify.py
config/: carriers.yml  ports.yml  vessels.yml  vessels_flat.csv
dags/: ais_dwell.py  carrier_normalize.py  port_enrichment.py
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: schema.yml
dbt/seeds/: dim_carrier.csv  dim_location.csv
dbt/tests/: fct_events_reconcile_silver.sql
deploy/: Dockerfile.ais  docker-compose.prod.yml  manifest.service
docs/: slo.md
docs/adr/: 001-foundation.md  002-aws-serverless.md  003-snowflake.md
docs/benchmarks/: spark.md
docs/postmortems/: 2026-07-21-gameday-a-silent-feed.md  2026-07-21-gameday-b-malformed-batch.md
docs/posts/: 01-building-manifest.md
docs/runbooks/: deploy.md  restore.md  triage.md
docs/weekly/: 2026-07-21.md
eta/: predict.py
generator/: generate.py
india/: pincode.py
infra/terraform/: main.tf  (+1 more)
lambdas/: handler.py
manifest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
nlq/: app.py  eval.jsonl  metrics.yml
pipelines/: enrich.py  ingest.py  metrics.py  normalize.py
snowflake/: 01_setup.sql  02_load.sql  03_dynamic_exception_mart.sql  04_time_travel_demo.sql  05_zero_copy_clone_ci.sql
spark/: benchmark.py  normalize_spark.py
tests/: test_dwell.py  test_enrich.py  test_eta.py  test_gamedays.py  test_generator.py  test_india.py  test_legs.py  test_metrics.py  test_nlq.py  test_normalize.py  test_notify.py
(+12 files in other folders)
