[project]
name = "manifest"
version = "0.1.0"
description = "Supply-chain visibility platform: carrier events + live AIS, bronze/silver/gold, exception alerting"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "websockets>=12.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["generator", "pipelines", "ais", "alerting"]

[tool.pytest.ini_options]
testpaths = ["tests"]
